plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'it.unicam.cs.mpgc.rpg123465'
version = '0.1.0'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-materialdesign2-pack:12.3.1'
    implementation 'com.google.code.gson:gson:2.11.0'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = '21.0.2'
    modules = ['javafx.controls', 'javafx.media']
}

application {
    mainClass = 'it.unicam.cs.mpgc.rpg123465.MainApp'
}

test {
    useJUnitPlatform()
}
